# backend

./: .env.example  .gitignore  Cargo.toml  README.md
contract/: Cargo.toml
contract/.cargo/: config.toml
contract/src/: lib.rs
entity/: Cargo.toml
entity/src/: credential.rs  credential_instance.rs  holder.rs  lib.rs  prelude.rs
host/: Cargo.toml
host/src/: main.rs
host/src/adapters/: mod.rs  wallet.rs
host/src/api/: mod.rs
host/src/api/routers/: hello.rs  mod.rs
host/src/api/routers/holder/: genproof.rs  genscript.rs  mod.rs  proof.rs
host/src/api/routers/issuer/: credential_instances.rs  credentials.rs  holders.rs  mod.rs  schemas.rs
host/src/api/routers/verifier/: mod.rs
host/src/db/: mod.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231228_182440_create_holder_table.rs  m20231228_183743_create_credential_table.rs  m20231228_185744_create_credential_instance_table.rs
shared/: Cargo.toml
shared/src/types/: mod.rs
