[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
shared = { path = "../shared" }
entity = { path = "../entity" }
migration = { path = "../migration" }
risc0-zkvm = { version = "0.19.1", features = ["prove"] }
serde = "1.0"
serde_json = "1.0.106"
boa_engine = "0.17.0"
rhai = "1.16.3"
axum = { version = "0.6.20", features = ["macros"]}
tokio = { version = "1.28.2", features = ["full"] }
bincode = "1.3.3"
base64ct = {version = "1.6.0", features = ["alloc"] }
dotenv = "0.10.0"
async-openai = "0.14.2"
sea-orm = { version = "0.12.10", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"]}
env_logger = "0.10.1"
sha2 = "0.10.8"
rand = "0.8.5"
near-crypto = "0.17.0"
near-jsonrpc-client = "0.6.0"
near-jsonrpc-primitives = "0.17.0"
near-primitives = "0.17.0"
rustpython-vm = "0.3.0"
tower-http = { version = "0.4.4", features = ["cors"]}
