[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "zk_prover"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }
shared = { path = "../../shared" }
rhai = { version = "1.16.3" }
#boa_engine = "0.17.0"
serde_json = { version = "1.0.106", default-features = false, features = ["alloc"] }
base64ct = { version = "1.6.0", features = ["alloc"] }

# Resolves error "error[E0658]: use of unstable library feature".
# See: https://stackoverflow.com/questions/40320124/how-can-i-clean-cargo-stuff
ahash = "=0.8.6"
